--- a/src/index.html
+++ b/src/index.html
@@ -23,38 +23,38 @@
 
         <form action="/page-for-form-handling" method="POST">
     
-            <label for="email">Email</label>
+            <label for="email">email</label>
             <input type="email" name="email" 
             id="email" placeholder="Your email" 
             required
             autocomplete
             autofocus />
 
-            <label for="name">Name</label>
+            <label for="name">name</label>
             <input type="text" name="name" 
             id="name" placeholder="Your name" 
             required
             autocomplete />
 
-            <label for="address">Address</label>
+            <label for="address">address</label>
             <input type="text" name="address" 
             id="name" placeholder="Your address" 
             required
             autocomplete />
 
-            <label for="phone">Phone</label>
+            <label for="phone">phone</label>
             <input type="tel" name="phone" 
             id="name" placeholder="Your phone" 
             required
             autocomplete />
 
-            <label for="color">Color</label>
+            <label for="color">color</label>
             <input type="color" name="color" 
             id="name" placeholder="Your name" 
             required
             autocomplete />
 
-            <label for="date">Selected date</label>
+            <label for="date">date</label>
             <input type="date" name="delivery_date" id="date" required/>
 
       <div class="emoji mb-6">💣🤯💥</div>
