--- a/src/index.html
+++ b/src/index.html
@@ -23,38 +23,22 @@
 
         <form action="/page-for-form-handling" method="POST">
     
-            <label for="email">email</label>
-            <input type="email" name="email" 
-            id="email" placeholder="Your email" 
-            required
-            autocomplete
-            autofocus />
+            <label for="email">Enter your email:</label>
+            <input type="email" id="email" name="email">
 
-            <label for="name">name</label>
-            <input type="text" name="name" 
-            id="name" placeholder="Your name" 
-            required
-            autocomplete />
+            <label for="email">Enter your name:</label>
+            <input type="name" id="name" name="name">
 
-            <label for="address">address</label>
-            <input type="text" name="address" 
-            id="name" placeholder="Your address" 
-            required
-            autocomplete />
+            <label for="address">Enter your address:</label>
+            <input type="address" id="address" name="address">
 
-            <label for="phone">phone</label>
-            <input type="tel" name="phone" 
-            id="name" placeholder="Your phone" 
-            required
-            autocomplete />
+            <label for="phone">Enter your phone:</label>
+            <input type="phone" id="phone" name="phone">
 
-            <label for="color">color</label>
-            <input type="color" name="color" 
-            id="name" placeholder="Your name" 
-            required
-            autocomplete />
+            <label for="color">Enter your color:</label>
+            <input type="color" id="color" name="color">
 
-            <label for="date">date</label>
+            <label for="date">Selected date</label>
             <input type="date" name="delivery_date" id="date" required/>
 
       <div class="emoji mb-6">💣🤯💥</div>
