--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
 
             <label for="date">Selected date</label>
             <input type="date" name="delivery_date" id="date" required/>
-
+          </form>
+      
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
