--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
     <div class="main">
 
         <form>
-    
-            <input name="email" type="email">
+            
+            <input type="email" name="email">
 
-            <input name="name" type="name">
+            <input type="text" name="name">
 
-            <input name="address" type="address">
+            <input type="text" name="address">
 
-            <input name="phone" type="phone">
+            <input type="tel" name="phone">
 
-            <input name="color" type="color">
+            <input type="color" name="color">
 
-            <input name="delivery_date" type="date"/>
+            <input type="date" name="delivery_date">
 
         </form>
 
