--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,17 @@
 
         <form>
             
-            <input type="email" name="email">
+            <input type="email" name="email"/>
 
-            <input type="text" name="name">
+            <input type="text" name="name"/>
 
-            <input type="text" name="address">
+            <input type="text" name="address"/>
 
-            <input type="tel" name="phone">
+            <input type="tel" name="phone"/>
 
-            <input type="color" name="color">
+            <input type="color" name="color"/>
 
-            <input type="date" name="delivery_date">
+            <input type="date" name="delivery_date"/>
 
         </form>
 
