--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,11 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   
-    <title>Checkout form!</title>
-
   </head>
   <body>
     <div class="main">
-
+     <div class="emoji mb-6">💣🤯💥
+      
         <form>
             
             <input type="email" name="email"/>
@@ -30,8 +28,7 @@
             <input type="date" name="delivery_date"/>
 
         </form>
-
-      <div class="emoji mb-6">💣🤯💥</div>
+      </div>
       <button class="button">Boom?</button>
     </div>
   </body>
